--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           lfs: false
 
+      - name: Pull LFS files
+        run: git lfs pull
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
